active bug on Safari fix

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ li button:hover {
     background-color: hsl(217, 12%, 63%);
 }
 
-li button:focus {
+li button:focus-within {
     transition: 0.3s;
     scale: 95%;
     color: hsl(0, 0%, 100%);
